--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:image" content="src/assets/coding.jpg" />
+    <meta property="og:description" content="A Developer Who Loves To Code. I'm excited to continue learning and creating innovative solutions in the world of web development!!!" />
     <link rel="icon" type="image/svg+xml" href="and-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>andev || Portfolio</title>
