--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:image" content="src/assets/andev.jpg" />
+    <meta property="og:image" content="./assets/andev.jpg" />
     <meta property="og:type" content="portfolio" />
     <meta property="og:title" content="andev | Portfolio" />
     <meta property="og:description" content="A Developer Who Loves To Code. I'm excited to continue learning and creating innovative solutions in the world of web development!!!" />
