--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:image" content="./assets/andev.jpg" />
+    <meta property="og:image" content="/src/assets/andev.jpg" />
     <meta property="og:type" content="portfolio" />
     <meta property="og:title" content="andev | Portfolio" />
-    <meta property="og:description" content="A Developer Who Loves To Code. I'm excited to continue learning and creating innovative solutions in the world of web development!!!" />
+    <meta property="og:description" content="J.Andy Echevarria Contreras. Front-End Developer. A Developer Who Loves To Code." />
     <link rel="icon" type="image/svg+xml" href="and-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>andev | Portfolio</title>
