create the modal for tc and pp

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>andev | Portfolio</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
