--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="J.Andy Echevarria Contreras. Front-End Developer. A Developer Who Loves To Code." />
     <meta name="theme-color" content="#001120" />
     <link rel="icon" type="image/svg+xml" href="/and-icon.svg" />
-    <link rel="apple-touch-icon" type="image/svg+xml" href="/and-icon.svg" />
+    <link rel="apple-touch-icon" type="image/svg+xml" href="/and-icon.svg" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>andev | Portfolio</title>
