work on SEO - Google verification meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="-EBwb7Mig0OsuoIdJGpSM0MeViK91gekxuc1rPETafA" />
     
     <meta property="og:image" content="/andev.jpg" />
     <meta property="og:type" content="portfolio" />
