fixe the icons for IOS in PWA

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
     <meta name="keywords" content="andev-code, andev, portafolios, portafolio, desarrollador, web, react, developer, frontend, javascript, programacion, freelance, autodidacta, J.Andy, Echevarria," />
     <meta name="theme-color" content="#001120" />
     <link rel="icon" type="image/svg+xml" href="/and-icon.svg" />
-    <link rel="apple-touch-icon" type="image/svg+xml" href="/and-icon.svg" sizes="180x180" />
-    <link rel="apple-touch-icon" type="image/svg+xml" href="/and-icon.svg" sizes="192x192" />
-    <link rel="apple-touch-icon" type="image/svg+xml" href="/and-icon.svg" sizes="512x512" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="60x60" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="72x72" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="76x76" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="114x114" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="120x120" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="144x144" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="152x152" href="/and-icon.svg">
+    <link rel="apple-touch-icon" sizes="512x512" href="/and-icon.svg">
     
     <title>andev | Portfolio</title>
   </head>
