New files upload of a new website rebranding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge" />
+  <meta http-equiv="refresh" content="text/html;charset=UTF-8" />
+  <meta name="google-site-verification" content="-EBwb7Mig0OsuoIdJGpSM0MeViK91gekxuc1rPETafA" />
   <title>andev-code Portafolio</title>
+  <meta name="description" content='J.Andy Echevarria Contreras. Front-End Developer. A Developer Who Loves To Code. "Self-discipline and motivation have been key to my success".' />
+  <meta name="keywords" content="andev-code, andev, portafolios, portafolio, desarrollador, web, react, developer, frontend, javascript, programacion, freelance, autodidacta, J.Andy, Echevarria," />
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/Icons/logo2.svg" type="image/svg">
 </head>
