New files upload of a new website rebranding

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=7,8,edge" />
   <meta http-equiv="refresh" content="text/html;charset=UTF-8" />
   <meta name="google-site-verification" content="oSRBd8BOj1wlPRqlzD5tlwyh-Y3zVK4XZUJsctPC_iU" />
-  <title>andev-code Portafolio</title>
-  <meta name="description" content='J.Andy Echevarria Contreras. Front-End Developer. A Developer Who Loves To Code. "Self-discipline and motivation have been key to my success".' />
-  <meta name="keywords" content="andev-code, andev, portafolios, portafolio, desarrollador, web, react, developer, frontend, javascript, programacion, freelance, autodidacta, J.Andy, Echevarria," />
+
+  <title>andev-code - Portafolio</title>
+
+  <meta property="og:image" content="./assets/logo2.jpg" />
+  <meta property="og:type" content="portafolio" />
+  <meta property="og:title" content="andev-code" />
+  <meta property="og:description" content='J.Andy Echevarria Contreras. FullStack Developer. Me apasiona crear soluciones.' />
+
+  <meta name="description" content='J.Andy Echevarria Contreras. FullStack Developer. Me apasiona crear soluciones.' />
+  <meta name="keywords" content="andev-code, andev, portafolios, portafolio, desarrollador, web, react, developer, frontend, javascript, programacion, freelance, autodidacta, Andy, Echevarria" />
+
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/Icons/logo2.svg" type="image/svg">
 </head>
