Some changes to Text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="refresh" content="text/html;charset=UTF-8" />
   <meta name="google-site-verification" content="oSRBd8BOj1wlPRqlzD5tlwyh-Y3zVK4XZUJsctPC_iU" />
 
-  <title>andev-code - Portafolio</title>
+  <title>andev.code</title>
 
   <meta property="og:image" content="./assets/logo2.jpg" />
   <meta property="og:type" content="portafolio" />
@@ -107,8 +107,8 @@
             <h3>Marky-MD</h3>
   
             <nav class="social">
-              <a href="https://github.com/andev-code/marky"><img src="assets/Icons/github.svg" alt="Repositorio en Github">Github</a>
-              <a href="https://marky-md.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web">Web</a>
+              <a href="https://github.com/andev-code/marky"><img src="assets/Icons/github.svg" alt="Repositorio en Github">Ver Código</a>
+              <a href="https://marky-md.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web">Ver la Web</a>
             </nav>
           </div>
   
@@ -133,8 +133,8 @@
             <h3>RM-Wiki</h3>
             
             <nav class="social">
-              <a href="https://github.com/andev-code/rm-wiki"><img src="assets/Icons/github.svg" alt="Repositorio en Github">Github</a>
-              <a href="https://rm-wk.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web">Web</a>
+              <a href="https://github.com/andev-code/rm-wiki"><img src="assets/Icons/github.svg" alt="Repositorio en Github">Ver Código</a>
+              <a href="https://rm-wk.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web">Ver la Web</a>
             </nav>
           </div>
   
@@ -179,7 +179,7 @@
         <div>
           <small>22 años</small>
           <small>Cuba - Arroyo Naranjo</small>
-          <small><img src="assets/Icons/email.svg" alt="Email icon">andevcode@gmail.com</small>
+          <a href="mailto:andevcode@gmail.com"><img src="assets/Icons/email.svg" alt="Email icon">andevcode@gmail.com</a>
         </div>
         <p>
           Desarrollador web <b>autodidacta</b> con experiencia en <b>React</b> y su ecosistema, aplicando principios <b>SOLID</b> y buenas prácticas. He alcanzado el nivel de <b>fullstack</b> con Next.js y en bases de datos no relacionales como MongoDB. Mi <b>objetivo</b> es crear sitios web <b>seguros</b> y visualmente <b>atractivos</b>, siempre buscando la mejora continua y la adopción de las últimas tecnologías.
@@ -187,15 +187,15 @@
       </article>
 
       <nav class="social">
-        <a href="https://t.me/andev-code"><img src="assets/Icons/telegram.svg" alt="telegram logo">Telegram</a>
+        <a href="https://t.me/andev_code" target="_blank"><img src="assets/Icons/telegram.svg" alt="telegram logo">Telegram</a>
 
-        <a href="https://github.com/andev-code"><img src="assets/Icons/github.svg" alt="github logo">Github</a>
+        <a href="https://github.com/andev-code" target="_blank"><img src="assets/Icons/github.svg" alt="github logo">Github</a>
 
-        <a href="https://linkedin.com/in/andev-code"><img src="assets/Icons/linkedin.svg" alt="linkedin logo">Linkedin</a>
+        <a href="https://linkedin.com/in/andev-code" target="_blank"><img src="assets/Icons/linkedin.svg" alt="linkedin logo">Linkedin</a>
 
-        <a href="https://twitter.com/andev-code"><img src="assets/Icons/twitter.svg" alt="twitter logo">X</a>
+        <a href="https://twitter.com/andev_code" target="_blank"><img src="assets/Icons/twitter.svg" alt="twitter logo">X</a>
 
-        <a href="https://instagram.com/andev-code"><img src="assets/Icons/instagram.svg" alt="instagram logo">Instagram</a>
+        <a href="https://instagram.com/andev_code" target="_blank"><img src="assets/Icons/instagram.svg" alt="instagram logo">Instagram</a>
       </nav>
     </section>
   </main>
@@ -210,9 +210,8 @@
 
       <p>Desarrollador que le <b>apasiona</b> crear <b>soluciones</b></p>
 
-      <div class="tyc">
-        <small>Terminos de Uso</small>
-        <small>Condiciones de Privacidad</small>
+      <div class="copy">
+        <small id="copy"></small>
       </div>
     </article>
 
