change theme icons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="buttons-ctn">
-        <img src="assets/Icons/sun.svg" alt="icono de un Sol" class="theme" id="theme" role="button">
+        <img src="assets/Icons/moon.svg" alt="icono de una Luna" class="theme" id="theme" role="button">
         <img src="assets/Icons/menu.svg" alt="menu icon" class="menu-button" id="menu-button">
       </div>
     </div>
