Adding new projects and fix css in the tecnologies div

--- a/index.html
+++ b/index.html
@@ -101,6 +101,40 @@
 
       <ul>
         <li>
+          <img src="assets/Projects/studio20.png" alt="Pagina Oficial del Studio20. Estudio de Fotografía y Edición de Vídeos.">
+  
+          <div>
+            <h3>Studio20</h3>
+            
+            <nav class="social">
+              <a href="https://github.com/andev-code/studio20-portfolio"><img src="assets/Icons/github.svg" alt="Repositorio en Github">Ver Código</a>
+              <a href="https://studio20.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Studio20" class="web">Ver la Web</a>
+            </nav>
+          </div>
+  
+          <p>Portafolio del Servicio de Fotografía y Edición de Video que brinda el <b>Studio20</b>. Dessarrolado en <b>React</b> para aprovechar su capacidad para <b>crear interfaces de usuario dinámicas y reutilizables</b> a través de componentes. El resultado no solo <b>cumple con los objetivos del proyecto</b>, sino que también ofrece una <b>experiencia de usuario excepcional</b> permitiendo una interacción fluida y una presentación visualmente atractiva, destacando la <b>calidad y diversidad de las fotografías del estudio</b>. Este proyecto demuestra mi habilidad para <b>combinar diseño y desarrollo</b> para crear soluciones web efectivas y atractivas.</p>
+  
+          <div>
+            <span>
+              <img src="assets/Icons/html.svg" alt="html logo">
+              HTML
+            </span>
+            <span>
+              <img src="assets/Icons/css.svg" alt="css3 logo">
+              CSS
+            </span>
+            <span>
+              <img src="assets/Icons/js.svg" alt="js logo">
+              Javascript
+            </span>
+            <span>
+              <img src="assets/Icons/react.svg" alt="js logo">
+              ReactJs
+            </span>
+          </div>
+        </li>
+
+        <li>
           <img src="assets/Projects/marky.png" alt="La muestra de la Pagina web Marky-md." id="marky">
   
           <div>
@@ -113,32 +147,6 @@
           </div>
   
           <p>Un editor de codigo <b>Markdown</b> en línea para crear Documentos marcados de manera rápida.</p>
-  
-          <div>
-            <span>
-              <img src="assets/Icons/react.svg" alt="react.js logo">
-              ReactJs
-            </span>
-            <span>
-              <img src="assets/Icons/tailwind.svg" alt="tailwindcss logo">
-              Tailwind
-            </span>
-          </div>
-        </li>
-  
-        <li>
-          <img src="assets/Projects/rm.png" alt="La muestra de la página web Rick & Morty." id="rm">
-  
-          <div>
-            <h3>RM-Wiki</h3>
-            
-            <nav class="social">
-              <a href="https://github.com/andev-code/rm-wiki"><img src="assets/Icons/github.svg" alt="Repositorio en Github">Ver Código</a>
-              <a href="https://rm-wk.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web">Ver la Web</a>
-            </nav>
-          </div>
-  
-          <p>Utilización de la <b>API</b> de Rick & Morty para crear una <b>SPA</b> en React con Paginación.</p>
   
           <div>
             <span>
