Fixing the script file error

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <h3>Marky-MD</h3>
   
             <nav class="social">
-              <a href="https://github.com/andev-code/marky"><img src="assets/Icons/github.svg" alt="Repositorio en Github">Ver Código</a>
-              <a href="https://marky-md.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web">Ver la Web</a>
+              <a href="https://github.com/andev-code/marky"><img src="assets/Icons/github.svg" alt="Repositorio en Github" class="button">Ver Código</a>
+              <a href="https://marky-md.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web" class="button">Ver la Web</a>
             </nav>
           </div>
   
