Fix the text on the expirience  and project sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content='J.Andy Echevarria Contreras. FullStack Developer. Me apasiona crear soluciones.' />
 
   <meta name="description" content='J.Andy Echevarria Contreras. FullStack Developer. Me apasiona crear soluciones.' />
-  <meta name="keywords" content="andev-code, andev, portafolios, portafolio, desarrollador, web, react, developer, frontend, javascript, programacion, freelance, autodidacta, Andy, Echevarria" />
+  <meta name="keywords" content="andev-code, andev, portafolios, portafolio, desarrollador, web, react, developer, frontend, javascript, programación, freelance, autodidacta, Andy, Echevarria, Andy Echevarria" />
 
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/Icons/logo2.svg" type="image/svg">
@@ -85,13 +85,13 @@
         <li class="xp-item">
           <time>2023-Actualidad</time>
           <small>main developer</small>
-          <p>Formo parte del equipo de desarrollo <b>Shirkasoft</b> donde ocupé el puesto de <b>Desarrollador</b> en la creación de <b>aplicaciones web</b> y <b>servicios</b> para Empresas de <b>Importaciones</b> y <b>Agencias de Vuelos</b>.</p>
+          <p>Formo parte del equipo de desarrollo <b>Shirkasoft</b> donde ocupé el puesto de <b>Desarrollador</b> en la creación de <b>aplicaciones web</b> y <b>servicios</b> para Empresas de <b>Importaciones</b> y <b>Agencias de Vuelos</b>. De esta manera desarrollé un <b>CMS</b>, lo que requirió una comprensión profunda de las <b>necesidades del negocio</b>, la <b>arquitectura de software</b> y la implementación de tecnologías de <b>backend y frontend</b>. Implementé un sistema de <b>gestión de bases de datos</b> robusto y eficiente, utilizando <b>MongoDB</b> para almacenar y gestionar la información de nuestros clientes.</p>
         </li>
 
         <li class="xp-item">
           <time>2022-2023</time>
           <small>freelance</small>
-          <p>Creé un <b>Portafolio/Showcase</b> para el Estudio de Fotografia <b>20 Studio</b></p>
+          <p>Creé un <b>Portafolio/Showcase</b> para el Estudio de Fotografia <b>Studio20</b>. Implementé una <b>arquitectura de aplicación basada en componentes</b>, aprovechando las ventajas de React para crear una experiencia de usuario <b>fluida y receptiva</b>. Implementé <b>técnicas de optimización de rendimiento</b>, para mejorar la <b>velocidad de carga</b>. Estas optimizaciones aseguraron que el portafolio se cargara rápidamente, incluso en dispositivos con conexiones a internet lentas. Con un diseño completamente <b>responsive</b>, aseguré que se visualizara correctamente en una <b>variedad de dispositivos.</b></p>
         </li>
       </ul>
     </section>
@@ -133,49 +133,37 @@
             </span>
           </div>
         </li>
-
-        <li>
-          <img src="assets/Projects/marky.png" alt="La muestra de la Pagina web Marky-md." id="marky">
-  
-          <div>
-            <h3>Marky-MD</h3>
-  
-            <nav class="social">
-              <a href="https://github.com/andev-code/marky"><img src="assets/Icons/github.svg" alt="Repositorio en Github" class="button">Ver Código</a>
-              <a href="https://marky-md.vercel.app"><img src="assets/Icons/web.svg" alt="Sitio Web de Marky" class="web" class="button">Ver la Web</a>
-            </nav>
-          </div>
-  
-          <p>Un editor de codigo <b>Markdown</b> en línea para crear Documentos marcados de manera rápida.</p>
-  
-          <div>
-            <span>
-              <img src="assets/Icons/react.svg" alt="react.js logo">
-              ReactJs
-            </span>
-            <span>
-              <img src="assets/Icons/tailwind.svg" alt="tailwindcss logo">
-              Tailwind
-            </span>
-          </div>
-        </li>
       </ul>
     </section>
 
     <section class="skills" id="habilidades">
       <h2>habilidades</h2>
 
-      <article>
-        <img src="assets/Icons/html.svg" alt="html logo" title="HTML5">
-        <img src="assets/Icons/css.svg" alt="css logo" title="CSS3">
-        <img src="assets/Icons/js.svg" alt="js logo" title="Javascript">
-        <img src="assets/Icons/tailwind.svg" alt="tailwind logo" title="Tailwind CSS">
-        <img src="assets/Icons/react.svg" alt="react logo" title="React JS">
-        <img src="assets/Icons/nextjs.svg" alt="nextjs logo" title="Next JS">
-        <img src="assets/Icons/astro.svg" alt="astro logo" title="Astro">
-        <img src="assets/Icons/mongodbcom.svg" alt="mongodb logo" title="MongoDB">
-        <img src="assets/Icons/python.svg" alt="python logo" title="Python">
-        <img src="assets/Icons/bash.svg" alt="bash logo" title="Bash Script">
+      <article class="marquee">
+        <div class="imgs-ctn">
+          <img src="assets/Icons/html.svg" alt="html logo" title="HTML5">
+          <img src="assets/Icons/css.svg" alt="css logo" title="CSS3">
+          <img src="assets/Icons/js.svg" alt="js logo" title="Javascript">
+          <img src="assets/Icons/tailwind.svg" alt="tailwind logo" title="Tailwind CSS">
+          <img src="assets/Icons/react.svg" alt="react logo" title="React JS">
+          <img src="assets/Icons/nextjs.svg" alt="nextjs logo" title="Next JS">
+          <img src="assets/Icons/astro.svg" alt="astro logo" title="Astro">
+          <img src="assets/Icons/mongodbcom.svg" alt="mongodb logo" title="MongoDB">
+          <img src="assets/Icons/python.svg" alt="python logo" title="Python">
+          <img src="assets/Icons/bash.svg" alt="bash logo" title="Bash Script">
+        </div>
+        <div class="imgs-ctn">
+          <img src="assets/Icons/html.svg" alt="html logo" title="HTML5">
+          <img src="assets/Icons/css.svg" alt="css logo" title="CSS3">
+          <img src="assets/Icons/js.svg" alt="js logo" title="Javascript">
+          <img src="assets/Icons/tailwind.svg" alt="tailwind logo" title="Tailwind CSS">
+          <img src="assets/Icons/react.svg" alt="react logo" title="React JS">
+          <img src="assets/Icons/nextjs.svg" alt="nextjs logo" title="Next JS">
+          <img src="assets/Icons/astro.svg" alt="astro logo" title="Astro">
+          <img src="assets/Icons/mongodbcom.svg" alt="mongodb logo" title="MongoDB">
+          <img src="assets/Icons/python.svg" alt="python logo" title="Python">
+          <img src="assets/Icons/bash.svg" alt="bash logo" title="Bash Script">
+        </div>
       </article>
     </section>
 
