fix ortography error

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </nav>
           </div>
   
-          <p>Portafolio del Servicio de Fotografía y Edición de Video que brinda el <b>Studio20</b>. Dessarrolado en <b>React</b> para aprovechar su capacidad para <b>crear interfaces de usuario dinámicas y reutilizables</b> a través de componentes. El resultado no solo <b>cumple con los objetivos del proyecto</b>, sino que también ofrece una <b>experiencia de usuario excepcional</b> permitiendo una interacción fluida y una presentación visualmente atractiva, destacando la <b>calidad y diversidad de las fotografías del estudio</b>. Este proyecto demuestra mi habilidad para <b>combinar diseño y desarrollo</b> para crear soluciones web efectivas y atractivas.</p>
+          <p>Portafolio del Servicio de Fotografía y Edición de Video que brinda el <b>Studio20</b>. Dessarrollado en <b>React</b> para aprovechar su capacidad para <b>crear interfaces de usuario dinámicas y reutilizables</b> a través de componentes. El resultado no solo <b>cumple con los objetivos del proyecto</b>, sino que también ofrece una <b>experiencia de usuario excepcional</b> permitiendo una interacción fluida y una presentación visualmente atractiva, destacando la <b>calidad y diversidad de las fotografías del estudio</b>. Este proyecto demuestra mi habilidad para <b>combinar diseño y desarrollo</b> para crear soluciones web efectivas y atractivas.</p>
   
           <div>
             <span>
