Change the skill section to a marquee in css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="keywords" content="andev-code, andev, portafolios, portafolio, desarrollador, web, react, developer, frontend, javascript, programación, freelance, autodidacta, Andy, Echevarria, Andy Echevarria" />
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
   <link rel="shortcut icon" href="assets/Icons/logo2.svg" type="image/svg">
 </head>
 
@@ -25,7 +26,6 @@
   <header>
     <div class="ctn-header">
       <div>
-        <img src="assets/logo2.jpg" alt="">
         <a href="#hero" class="logo" translate="no">andev.<b>code</b></a>
       </div>
 
@@ -54,7 +54,7 @@
 
   <main>
     <section class="hero" id="hero">
-      <img src="assets/profile.jpg" alt="J.Andy Echevarria Contreras en una oficina verde." width="100px" height="100px">
+      <img src="assets/profile.jpg" alt="J.Andy Echevarria Contreras en una oficina verde." width="100px" height="100px" class="profile">
 
       <article class="name">
         <article class="social">
@@ -83,15 +83,15 @@
 
       <ul class="xp-list">
         <li class="xp-item">
-          <time>2023-Actualidad</time>
+          <time>SEP-2023 a Actualidad</time>
           <small>main developer</small>
           <p>Formo parte del equipo de desarrollo <b>Shirkasoft</b> donde ocupé el puesto de <b>Desarrollador</b> en la creación de <b>aplicaciones web</b> y <b>servicios</b> para Empresas de <b>Importaciones</b> y <b>Agencias de Vuelos</b>. De esta manera desarrollé un <b>CMS</b>, lo que requirió una comprensión profunda de las <b>necesidades del negocio</b>, la <b>arquitectura de software</b> y la implementación de tecnologías de <b>backend y frontend</b>. Implementé un sistema de <b>gestión de bases de datos</b> robusto y eficiente, utilizando <b>MongoDB</b> para almacenar y gestionar la información de nuestros clientes.</p>
         </li>
 
         <li class="xp-item">
-          <time>2022-2023</time>
+          <time>DIC-2022 a FEB-2023</time>
           <small>freelance</small>
-          <p>Creé un <b>Portafolio/Showcase</b> para el Estudio de Fotografia <b>Studio20</b>. Implementé una <b>arquitectura de aplicación basada en componentes</b>, aprovechando las ventajas de React para crear una experiencia de usuario <b>fluida y receptiva</b>. Implementé <b>técnicas de optimización de rendimiento</b>, para mejorar la <b>velocidad de carga</b>. Estas optimizaciones aseguraron que el portafolio se cargara rápidamente, incluso en dispositivos con conexiones a internet lentas. Con un diseño completamente <b>responsive</b>, aseguré que se visualizara correctamente en una <b>variedad de dispositivos.</b></p>
+          <p>Un <b>Portafolio/Showcase</b> para el Estudio de Fotografia <b>Studio20</b>. Implementé una <b>arquitectura de aplicación basada en componentes</b>, aprovechando las ventajas de React para crear una experiencia de usuario <b>fluida y receptiva</b>. Implementé <b>técnicas de optimización de rendimiento</b>, para mejorar la <b>velocidad de carga</b>. Estas optimizaciones aseguraron que el portafolio se cargara rápidamente, incluso en dispositivos con conexiones a internet lentas. Con un diseño completamente <b>responsive</b>, aseguré que se visualizara correctamente en una <b>variedad de dispositivos.</b></p>
         </li>
       </ul>
     </section>
@@ -141,28 +141,50 @@
 
       <article class="marquee">
         <div class="imgs-ctn">
-          <img src="assets/Icons/html.svg" alt="html logo" title="HTML5">
-          <img src="assets/Icons/css.svg" alt="css logo" title="CSS3">
-          <img src="assets/Icons/js.svg" alt="js logo" title="Javascript">
-          <img src="assets/Icons/tailwind.svg" alt="tailwind logo" title="Tailwind CSS">
-          <img src="assets/Icons/react.svg" alt="react logo" title="React JS">
-          <img src="assets/Icons/nextjs.svg" alt="nextjs logo" title="Next JS">
-          <img src="assets/Icons/astro.svg" alt="astro logo" title="Astro">
-          <img src="assets/Icons/mongodbcom.svg" alt="mongodb logo" title="MongoDB">
-          <img src="assets/Icons/python.svg" alt="python logo" title="Python">
-          <img src="assets/Icons/bash.svg" alt="bash logo" title="Bash Script">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" alt="HTML5 logo" title="HTML5" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" alt="css3 logo" title="css3" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="javascript logo" title="javascript" width="70px" height="70px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original-wordmark.svg" alt="github logo" title="github" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" alt="markdown logo" title="markdown" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-plain-wordmark.svg" alt="git logo" title="git" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/npm/npm-original-wordmark.svg" alt="npm logo" title="npm" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/json/json-original.svg" alt="json logo" title="json" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="react logo" title="react" width="80px" height="80px" class="rotate"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" alt="tailwindcss logo" title="tailwindcss" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg" alt="vitejs logo" title="vitejs" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vercel/vercel-original-wordmark.svg" alt="vercel logo" title="vercel" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/electron/electron-original.svg" alt="electron logo" title="electron" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original-wordmark.svg" alt="nextjs logo" title="nextjs" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" alt="typescript logo" title="typescript" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-plain-wordmark.svg" alt="nodejs logo" title="nodejs" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg" alt="express logo" title="express" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-plain-wordmark.svg" alt="mongodb logo" title="mongodb" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongoose/mongoose-original-wordmark.svg" alt="mongoose logo" title="mongoose" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/astro/astro-original-wordmark.svg" alt="astro logo" title="astro" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bash/bash-plain.svg" alt="bash logo" title="bash" width="80px" height="80px"/>
         </div>
         <div class="imgs-ctn">
-          <img src="assets/Icons/html.svg" alt="html logo" title="HTML5">
-          <img src="assets/Icons/css.svg" alt="css logo" title="CSS3">
-          <img src="assets/Icons/js.svg" alt="js logo" title="Javascript">
-          <img src="assets/Icons/tailwind.svg" alt="tailwind logo" title="Tailwind CSS">
-          <img src="assets/Icons/react.svg" alt="react logo" title="React JS">
-          <img src="assets/Icons/nextjs.svg" alt="nextjs logo" title="Next JS">
-          <img src="assets/Icons/astro.svg" alt="astro logo" title="Astro">
-          <img src="assets/Icons/mongodbcom.svg" alt="mongodb logo" title="MongoDB">
-          <img src="assets/Icons/python.svg" alt="python logo" title="Python">
-          <img src="assets/Icons/bash.svg" alt="bash logo" title="Bash Script">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" alt="HTML5 logo" title="HTML5" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" alt="css3 logo" title="css3" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="javascript logo" title="javascript" width="70px" height="70px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original-wordmark.svg" alt="github logo" title="github" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/markdown/markdown-original.svg" alt="markdown logo" title="markdown" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-plain-wordmark.svg" alt="git logo" title="git" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/npm/npm-original-wordmark.svg" alt="npm logo" title="npm" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/json/json-original.svg" alt="json logo" title="json" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="react logo" title="react" width="80px" height="80px" class="rotate"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" alt="tailwindcss logo" title="tailwindcss" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg" alt="vitejs logo" title="vitejs" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vercel/vercel-original-wordmark.svg" alt="vercel logo" title="vercel" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/electron/electron-original.svg" alt="electron logo" title="electron" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original-wordmark.svg" alt="nextjs logo" title="nextjs" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" alt="typescript logo" title="typescript" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-plain-wordmark.svg" alt="nodejs logo" title="nodejs" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg" alt="express logo" title="express" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-plain-wordmark.svg" alt="mongodb logo" title="mongodb" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongoose/mongoose-original-wordmark.svg" alt="mongoose logo" title="mongoose" width="80" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/astro/astro-original-wordmark.svg" alt="astro logo" title="astro" width="80px" height="80px"/>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bash/bash-original.svg" alt="bash logo" title="bash" width="80px" height="80px"/>
         </div>
       </article>
     </section>
@@ -200,7 +222,6 @@
   <footer>
     <article class="info">
       <div class="logo-ctn">
-        <img src="assets/logo2.jpg" alt="logo">
         <span class="logo" translate="no">andev.<b>code</b></span>
       </div>
 
